--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Shahyad Khamnei</title>
+<link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+<h1>Test</h1>
+</body>
+</html>
