--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<title>Shahyad Khamnei</title>
-<link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-<h1>Test</h1>
-</body>
+<!DOCTYPE html> 
+<html>
+  <head>
+    <title>Shahyad Khamnei - Homepage</title>
+  </head>
+  
+  <body>
+    <h1>Hi</h1>  
+    
+    <p>Welcome to my website!</p> 
+  </body>
 </html>
