--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   </head>
   
   <body>
-    <h1>Hi</h1>  
+    <h1>Welcome to my Website</h1>  
     
-    <p>Welcome to my website!</p> 
+    <p></p> 
   </body>
 </html>
