--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <body>
     <h1>Welcome to my Website</h1>  
     
-    <p></p> 
+    <p>My name is Shahyad Khamnei, and I am a math and electrical engineering double major concentrating in nantoechnology at Boston University. I am also a computer engineering minor with an emphasis on software.</p> 
   </body>
 </html>
