--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <body>
     <h1>Welcome to my Website</h1>  
     
-    <p>My name is Shahyad Khamnei, and I am a math and electrical engineering double major concentrating in nantoechnology at Boston University. I am also a computer engineering minor with an emphasis on software.</p> 
+    <p>My name is Shahyad Khamnei, and I am a math and electrical engineering double major concentrating in nantoechnology at Boston University. I am also a computer 
+      engineering minor with an emphasis on software.</p> 
+  </body>
+
+  <body>
+    <h1>Research</h1>
+  </body>
+
+  <body>
+    <h1>Professional Experience</h1>
   </body>
 </html>
