--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html> 
 <html>
+  <head> 
+    <link rel="stylesheet" href="styles.css">
+  </head>
   <head>
     <title>Shahyad Khamnei - Homepage</title>
   </head>
@@ -22,4 +25,15 @@
   <body>
     <h1>Personal</h1>
   </body>
+  
+  <section>
+  <nav>
+    <ul>
+      <li><a href="personal.html">Personal</a></li>
+      <li><a href="profexp.html">Professional Experience</a></li>
+      <li><a href="research.html">Research</a></li>
+    </ul>
+  </nav>
+  </section>
+
 </html>
