--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <section>
   <nav>
     <ul>
+      <li><a href="index.html">Home</a></li>
       <li><a href="personal.html">Personal</a></li>
       <li><a href="profexp.html">Professional Experience</a></li>
       <li><a href="research.html">Research</a></li>
