--- a/profexp.html
+++ b/profexp.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html> 
+<html>
+  <head> 
+    <link rel="stylesheet" href="personal.css">
+  </head>
+  <head>
+    <title>Shahyad Khamnei - Professional Experience</title>
+  </head>
+  
+  <body>
+    <h1>Professional Experience</h1>  
+    
+    <p>stuff</p> 
+ 
+  <section>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="personal.html">Personal</a></li>
+      <li><a href="profexp.html">Professional Experience</a></li>
+      <li><a href="research.html">Research</a></li>
+    </ul>
+  </nav>
+  </section>
 
+</html>
