--- a/profexp.html
+++ b/profexp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
   <head> 
-    <link rel="stylesheet" href="personal.css">
+    <link rel="stylesheet" href="profexp.css">
   </head>
   <head>
     <title>Shahyad Khamnei - Professional Experience</title>
