--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
   </head>
   
   <body>
-    <h1>Welcome to my Website</h1>  
-    
-    <p>My name is Shahyad Khamnei, and I am a math and electrical engineering double major concentrating in nantoechnology at Boston University. I am also a computer 
-      engineering minor with an emphasis on software.</p> 
+    <header>
+      <h1>Welcome to my Website</h1>  
+      <nav>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="personal.html">Personal</a></li>
+        <li><a href="profexp.html">Professional Experience</a></li>
+        <li><a href="research.html">Research</a></li>
+      </nav> 
+    </header>
+    <main>
+      <p>My name is Shahyad Khamnei, and I am a math and electrical engineering double major concentrating in nantoechnology at Boston University. I am also a computer 
+      engineering minor with an emphasis on software.</p>
+    </main>
   </body>
   
-  <section>
-  <nav>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="personal.html">Personal</a></li>
-      <li><a href="profexp.html">Professional Experience</a></li>
-      <li><a href="research.html">Research</a></li>
-  </nav>
-  </section>
-
 </html>
