--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       <p>My name is Shahyad Khamnei, and I am a math and electrical engineering double major concentrating in nantoechnology at Boston University. I am also a computer 
       engineering minor with an emphasis on software.</p>
     </main>
+    <footer>
+      <p>&copy; 2024 Shahyad Khamnei. All rights reserved.</p>
+    </footer>
   </body>
   
 </html>
