--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <header>
       <h1>Welcome to my Website</h1>  
       <nav>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="personal.html">Personal</a></li>
-        <li><a href="profexp.html">Professional Experience</a></li>
-        <li><a href="research.html">Research</a></li>
+        <a href="index.html">Home</a>
+        <a href="personal.html">Personal</a>
+        <a href="profexp.html">Professional Experience</a>
+        <a href="research.html">Research</a>
       </nav> 
     </header>
     <main>
