--- a/research.html
+++ b/research.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html> 
+<html lang="en">
 <html>
   <head> 
-    <link rel="stylesheet" href="research.css">
-  </head>
-  <head>
+    <link rel="researchstyles" href="research.css">
     <title>Shahyad Khamnei - Research</title>
   </head>
   
   <body>
-    <h1>Research</h1>  
-    
-    <p>stuff</p> 
- 
-  <section>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="personal.html">Personal</a></li>
-      <li><a href="profexp.html">Professional Experience</a></li>
-      <li><a href="research.html">Research</a></li>
-    </ul>
-  </nav>
-  </section>
-
+    <header>
+      <h1>Research</h1>  
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="personal.html">Personal</a>
+        <a href="profexp.html">Professional Experience</a>
+        <a href="research.html">Research</a>
+      </nav> 
+    </header>
+    <main>
+      <p>stuff</p>
+    </main>
+    <footer>
+      <p>&copy; 2024 Shahyad Khamnei. All rights reserved.</p>
+    </footer>
+  </body>
+  
 </html>
+
