--- a/profexp.html
+++ b/profexp.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html> 
 <html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html>
   <head> 
     <link rel="profexpstyles" href="profexp.css">
