--- a/research.html
+++ b/research.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <html>
   <head> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="researchstyles" href="research.css">
     <title>Shahyad Khamnei - Research</title>
   </head>
