--- a/research.html
+++ b/research.html
@@ -3,7 +3,7 @@
 <html>
   <head> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="researchstyles" href="research.css">
+    <link rel="researchsheet" href="research.css">
     <title>Shahyad Khamnei - Research</title>
   </head>
   
