--- a/profexp.html
+++ b/profexp.html
@@ -3,7 +3,7 @@
 <html>
   <head> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="profexpstyles" href="profexp.css">
+    <link rel="profexpsheet" href="profexp.css">
     <title>Shahyad Khamnei - Professional Experience</title>
   </head>
   
