--- a/personal.html
+++ b/personal.html
@@ -3,7 +3,7 @@
 <html>
   <head> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="personalsheet" href="personal.css">
+    <link rel="stylesheet" href="personal.css">
     <title>Shahyad Khamnei - Personal</title>
   </head>
   
