--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   <body>
     <header>
-      <h1>Welcome to my Website</h1>  
+      <h1>Home</h1>  
       <nav>
         <a href="index.html">Home</a>
         <a href="personal.html">Personal</a>
@@ -19,6 +19,7 @@
       </nav> 
     </header>
     <main>
+      <h1>Welcome to my Website!</h1>
       <p>My name is Shahyad Khamnei, and I am a math and electrical engineering double major concentrating in nantoechnology at Boston University. I am also a computer 
       engineering minor with an emphasis on software.</p>
     </main>
