--- a/personal.html
+++ b/personal.html
@@ -15,11 +15,12 @@
         <a href="index.html">Home</a>
         <a href="personal.html">Personal</a>
         <a href="profexp.html">Professional Experience</a>
-        <a href="research.html">Research</a>
+        <a href="research.html" target="_blank">Research</a>
       </nav> 
     </header>
     <main>
-      <p>stuff</p>
+      <div>Email: shahyadkhamnei1@gmail.com</div>
+      <a href="LinkedIn">LinkedIn</a>
     </main>
     <footer>
       <p>&copy; 2024 Shahyad Khamnei. All rights reserved.</p>
