--- a/personal.html
+++ b/personal.html
@@ -20,7 +20,7 @@
     </header>
     <main>
       <div>Email: shahyadkhamnei1@gmail.com</div>
-      <a href="https://www.linkedin.com/in/shahyad-khamnei-1764a2263" target="_blank"LinkedIn</a>
+      <a href="https://www.linkedin.com/in/shahyad-khamnei-1764a2263" target="_blank">LinkedIn</a>
     </main>
     <footer>
       <p>&copy; 2024 Shahyad Khamnei. All rights reserved.</p>
