--- a/html/research.html
+++ b/html/research.html
@@ -3,7 +3,7 @@
 <html>
   <head> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="research.css">
+    <link rel="stylesheet" href="css/research.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <title>Shahyad Khamnei - Research</title>
   </head>
@@ -12,10 +12,10 @@
     <header>
       <h1>Research</h1>  
       <nav>
-        <a href="index.html">Home</a>
-        <a href="personal.html">Personal</a>
-        <a href="profexp.html">Professional Experience</a>
-        <a href="research.html">Research</a>
+        <a href="html/index.html">Home</a>
+        <a href="html/personal.html">Personal</a>
+        <a href="html/profexp.html">Professional Experience</a>
+        <a href="htmlresearch.html">Research</a>
       </nav> 
     </header>
     <main>
