--- a/html/personal.html
+++ b/html/personal.html
@@ -12,7 +12,7 @@
     <header>
       <h1>Personal</h1>  
       <nav>
-        <a href="html/index.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="html/personal.html">Personal</a>
         <a href="html/profexp.html">Professional Experience</a>
         <a href="html/research.html">Research</a>
