--- a/html/research.html
+++ b/html/research.html
@@ -12,10 +12,10 @@
     <header>
       <h1>Research</h1>  
       <nav>
-        <a href="html/index.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="html/personal.html">Personal</a>
         <a href="html/profexp.html">Professional Experience</a>
-        <a href="htmlresearch.html">Research</a>
+        <a href="html/research.html">Research</a>
       </nav> 
     </header>
     <main>
