--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <h1>Home</h1>  
       <nav>
         <a href="index.html">Home</a>
-        <a href="html/personal.html">Personal</a>
-        <a href="html/profexp.html">Professional Experience</a>
-        <a href="html/research.html">Research</a>
+        <a href="personal.html">Personal</a>
+        <a href="profexp.html">Professional Experience</a>
+        <a href="research.html">Research</a>
       </nav> 
     </header>
     <main>
