--- a/profexp.html
+++ b/profexp.html
@@ -3,7 +3,7 @@
 <html>
   <head> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="profexp.css">
+    <link rel="stylesheet" href="css/profexp.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <title>Shahyad Khamnei - Professional Experience</title>
   </head>
