--- a/research.html
+++ b/research.html
@@ -3,7 +3,7 @@
 <html>
   <head> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="research.css">
+    <link rel="stylesheet" href="css/research.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <title>Shahyad Khamnei - Research</title>
   </head>
