--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     </header>
     <main>
       <h2>Welcome to my Website!</h2>
-      <p>My name is Shahyad Khamnei, and I am a math and electrical engineering double major concentrating in nantoechnology at Boston University. I am also a computer 
-      engineering minor with an emphasis on software.</p>
+      <p>My name is Shahyad Khamnei, and I am a math and electrical engineering undergraduate at Boston University.</p>
     </main>
     <footer>
       <p>&copy; 2024 Shahyad Khamnei. All rights reserved.</p>
