--- a/personal.html
+++ b/personal.html
@@ -21,7 +21,9 @@
     <main>
       <div>Email: shahyadkhamnei1@gmail.com</div>
       <a href="https://www.linkedin.com/in/shahyad-khamnei-1764a2263" target="_blank">LinkedIn</a>
-      <img src="/images/LinkedIn_Logo.png" alt="LinkedIn Icon" style="width:128px;height:128px;">
+      <a href="https://www.linkedin.com/in/shahyad-khamnei-1764a2263">
+        <img src="/images/LinkedIn_Logo.png" alt="LinkedIn Icon" style="width:32px;height:32px;">
+      </a>
     </main>
     <footer>
       <p>&copy; 2024 Shahyad Khamnei. All rights reserved.</p>
