--- a/personal.html
+++ b/personal.html
@@ -20,10 +20,10 @@
     </header>
     <main>
       <div>Email: shahyadkhamnei1@gmail.com</div>
-      <a href="https://www.linkedin.com/in/shahyad-khamnei-1764a2263" target="_blank">LinkedIn</a>
-      <a href="https://www.linkedin.com/in/shahyad-khamnei-1764a2263">
+      <a href="https://www.linkedin.com/in/shahyad-khamnei-1764a2263" target="_blank">
         <img src="/images/LinkedIn_Logo.png" alt="LinkedIn Icon" style="width:32px;height:32px;">
       </a>
+      <a id ="lIn" href="https://www.linkedin.com/in/shahyad-khamnei-1764a2263" target="_blank">LinkedIn</a>
     </main>
     <footer>
       <p>&copy; 2024 Shahyad Khamnei. All rights reserved.</p>
