--- a/personal.html
+++ b/personal.html
@@ -19,7 +19,10 @@
       </nav> 
     </header>
     <main>
-      <div>Email: shahyadkhamnei1@gmail.com</div>
+      <a href="mailto:shahyadkhamnei1@gmail.com" target="_blank">
+        <img src="/images/Gmail_Logo.png" alt="Gmail Icon" style="width:32px;height:32px;">
+      </a>
+      <a id = "gmail" href="mailto:shahyadkhamnei1@gmail.com" target="_blank">Shahyadkhamnei1@gmail.com</a>
       <a href="https://www.linkedin.com/in/shahyad-khamnei-1764a2263" target="_blank">
         <img src="/images/LinkedIn_Logo.png" alt="LinkedIn Icon" style="width:32px;height:32px;">
       </a>
