--- a/personal.html
+++ b/personal.html
@@ -20,12 +20,12 @@
     </header>
     <main>
       <a href="mailto:shahyadkhamnei1@gmail.com" target="_blank">
-        <img src="/images/Gmail_Logo.png" alt="Gmail Icon" style="width:32px;height:32px;text-decoration:none;">
+        <img src="/images/Gmail_Logo.png" alt="Gmail Icon" style="width:32px;height:32px;text-decoration:none;border: 2px solid #000;">
       </a>
       <a class="link" href="mailto:shahyadkhamnei1@gmail.com" target="_blank">Shahyadkhamnei1@gmail.com</a>
       <a href="https://www.linkedin.com/in/shahyad-khamnei-1764a2263" target="_blank">
       <div> </div>
-        <img src="/images/LinkedIn_Logo.png" alt="LinkedIn Icon" style="width:32px;height:32px;text-decoration:none;">
+        <img src="/images/LinkedIn_Logo.png" alt="LinkedIn Icon" style="width:32px;height:32px;text-decoration:none;border: 2px solid #000;">
       </a>
       <a class="link" href="https://www.linkedin.com/in/shahyad-khamnei-1764a2263" target="_blank">LinkedIn</a>
     </main>
