--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="personal.html">Personal</a>
         <a href="profexp.html">Professional Experience</a>
         <a href="research.html">Research</a>
+        <a href="#" onclick="showTaskPage()">Planner</a>
       </nav> 
     </header>
     <main>
