--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <script>
       // The Base64 encoded version of your new password "Planner"
-      const encodedPassword = 'UGxhbm5lcgo=';
+      const encodedPassword = 'UGxhbm5lcg==';
 
       function showTaskPage() {
           const userInput = prompt("Enter password to access tasks:");
