--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           const decodedPassword = atob(encodedPassword);
 
           if (userInput === decodedPassword) {
-              window.location.href = 'task.html';
+              window.location.href = 'planner.html';
           } else {
               alert("Incorrect password!");
           }
