--- a/planner.html
+++ b/planner.html
@@ -266,10 +266,15 @@
     <script src="https://cdn.jsdelivr.net/npm/confetti-js@0.0.17/dist/index.min.js"></script>
     <script>
         const taskSignificancePoints = {
-            daily: 1,
-            minor: 5,
-            major: 10,
-            massive: 25
+            daily1: 1,
+            daily2: 2,
+            daily3: 3,
+            minor1: 10,
+            minor2: 20,
+            minor3: 30,
+            major1: 100,
+            major2: 200,
+            massive: 1000,
         };
 
         let tasks = JSON.parse(localStorage.getItem('tasks')) || {};
