--- a/planner.html
+++ b/planner.html
@@ -209,9 +209,14 @@
                 <h3>Add New Task</h3>
                 <input type="text" id="new-task" placeholder="Task description">
                 <select id="new-task-significance">
-                    <option value="daily">Daily</option>
-                    <option value="minor">Minor</option>
-                    <option value="major">Major</option>
+                   <option value="daily1">Small Daily</option>
+                    <option value="daily2">Medium Daily</option>
+                    <option value="daily3">Important Daily</option>
+                    <option value="minor1">Mini</option>
+                    <option value="minor2">Minor</option>
+                    <option value="minor3">Big Minor</option>
+                    <option value="major1">Major</option>
+                    <option value="major2">Big Major</option>
                     <option value="massive">Massive</option>
                 </select>
                 <select id="new-task-category">
